objects/WR_StagingSelection__c.object
<CustomObject>
    <description>Staging table for user selection rough work on Installation Data Tab of  Online Warranty Registration.</description>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISselected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISselected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDrafted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDrafted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInSelectedList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInSelectedList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WR_FDS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WR_FDS_Product</label>
        <referenceTo>WR_FDS_Product__c</referenceTo>
        <relationshipLabel>WR_StagingSelections</relationshipLabel>
        <relationshipName>WR_StagingSelections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WR_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WR Line Item</label>
        <referenceTo>WR_Line_Item__c</referenceTo>
        <relationshipLabel>WR_StagingSelections</relationshipLabel>
        <relationshipName>WR_StagingSelections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Registration__c</fullName>
        <label>Warranty Registration</label>
        <referenceTo>Warranty_Registration__c</referenceTo>
        <relationshipLabel>WR_StagingSelections</relationshipLabel>
        <relationshipName>WR_StagingSelections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>defaultSortOrder__c</fullName>
        <formula>IF( isNew__c = &apos;true&apos;, 1,  IF( IsDrafted__c ,2,  IF( isRegistered__c , 3,   IF( isManuallyRegistered__c , 4, 0) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>defaultSortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isManuallyRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Warranty in manually registered</description>
        <label>isManuallyRegistered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNew__c</fullName>
        <formula>IF( OR(IsDrafted__c, isManuallyRegistered__c , isRegistered__c ) , &apos;false&apos;, &apos;true&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isNew</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRegistered</label>
        <type>Checkbox</type>
    </fields>
    <label>WR_StagingSelection</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>WR_ProductSelectionStaging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WR_StagingSelections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>